--- a/src/main/ca/ubc/cs/cpsc210/ui/DifficultyMenu.fxml
+++ b/src/main/ca/ubc/cs/cpsc210/ui/DifficultyMenu.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.ubc.cs.cpsc210.controllers.DifficultyMenuController">
    <top>
       <Label text="Difficulty Settings" BorderPane.alignment="CENTER">
          <font>
@@ -21,9 +20,9 @@
          <children>
             <VBox alignment="CENTER" prefHeight="345.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Easy" textAlignment="CENTER" />
-                  <Button layoutX="260.0" layoutY="133.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Medium" />
-                  <Button layoutX="260.0" layoutY="183.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Hard" />
+                  <Button fx:id="buttonEasy" mnemonicParsing="false" onAction="#easyGame" prefHeight="50.0" prefWidth="100.0" text="Easy" textAlignment="CENTER" />
+                  <Button fx:id="buttonMedium" layoutX="260.0" layoutY="133.0" mnemonicParsing="false" onAction="#mediumGame" prefHeight="50.0" prefWidth="100.0" text="Medium" />
+                  <Button fx:id="buttonHard" layoutX="260.0" layoutY="183.0" mnemonicParsing="false" onAction="#hardGame" prefHeight="50.0" prefWidth="100.0" text="Hard" />
                </children>
             </VBox>
          </children>
